# mani_qp_controller

./: CMakeLists.txt  README.md  dqrobotics_dependencies.cmake  joint_position_1102.csv  joint_velocity_real_1102_K_qp_0_5.csv  mani_qp_plugin.xml  package.xml
config/: collision_behavior.yaml  franka_example_controllers.yaml  mani_qp_controller.yaml
data/: x_t_traj.txt
data/bags/: bag2csv.sh  cartesian_position.csv  joint_position.csv  joint_position_1102.bag  joint_position_dyn.bag  joint_position_dyn.csv  joint_position_orig_f.csv  joint_position_real.bag  joint_position_real.csv  joint_position_real_0909.bag  joint_position_real_0909.csv  joint_position_real_0911.bag  joint_position_real_0913.csv  joint_position_real_1002.bag  joint_position_real_1102.bag  joint_position_real_1102_K_qp_0_5.csv  joint_position_real_1102_K_qp_1.csv  joint_position_real_1107.bag  joint_position_real_1107.csv  joint_position_real_1107_1.csv  joint_position_real_axis_1107.bag  joint_position_real_axis_1107.csv  joint_position_real_axis_x_1107.bag  joint_position_real_axis_x_1107.csv  joint_position_real_demo.csv  joint_position_real_demo_offset.csv  joint_position_real_dyn.bag  joint_position_real_dyn.csv  joint_position_real_dyn_noconstr.csv  joint_position_real_dyn_tuned.csv  joint_position_real_elbow_1.bag  joint_position_real_exam_force.bag  joint_position_real_joint_limit_.csv  joint_position_real_joint_limit_ddq.csv  joint_position_real_joint_limit_q.csv  joint_position_real_joint_limit_v.csv  joint_position_real_limit_1107.bag  joint_position_real_limit_1107.csv  joint_position_real_mani_1107.bag  joint_position_real_mani_1107.csv  (+90 more)
data/bags/csv/: joint_configurations_Drill_1.csv  joint_configurations_Drill_2.csv  wrist_pose_shoulder_Drill_1.csv
data/bags/force/: ext_force_guid_ev_1120.bag  ext_force_guid_exec_task_1108.bag  ext_force_guid_exec_task_1108_2.bag  ext_force_guid_exec_task_1108_3.bag  ext_force_guid_exec_task_1108_4.bag  ext_force_guid_exec_task_1108_5.bag  ext_force_guid_exec_task_1108_6.bag  ext_force_guid_exec_task_1120_.bag  ext_force_guid_exec_task_1120_1.bag  ext_force_guid_exec_task_1120_10.bag  ext_force_guid_exec_task_1120_10_1.bag  ext_force_guid_exec_task_1120_10_2.bag  ext_force_guid_exec_task_1120_10_3.bag  ext_force_guid_exec_task_1120_10_4.bag  ext_force_guid_exec_task_1120_10_5.bag  ext_force_guid_exec_task_1120_11.bag  ext_force_guid_exec_task_1120_11_1.bag  ext_force_guid_exec_task_1120_11_2.bag  ext_force_guid_exec_task_1120_11_3.bag  ext_force_guid_exec_task_1120_12_1.bag  ext_force_guid_exec_task_1120_12_2.bag  ext_force_guid_exec_task_1120_12_3.bag  ext_force_guid_exec_task_1120_14_1.bag  ext_force_guid_exec_task_1120_2.bag  ext_force_guid_exec_task_1120_3.bag  ext_force_guid_exec_task_1120_4.bag  ext_force_guid_exec_task_1120_6.bag  ext_force_guid_exec_task_1120_7.bag  ext_force_guid_exec_task_1120_8.bag  ext_force_guid_exec_task_1120_8_1.bag  (+18 more)
data/csv/: .~lock.joint_position_demo.csv#  cartesian_translation.csv  cartesian_translation01.csv  cartesian_translation02.csv  cartesian_translation03.csv  cartesian_translation_0912_0.csv  cartesian_translation_0912_1.csv  cartesian_translation_0912_2.csv  ext_force_guid_ev_1120.csv  ext_force_guid_exec_task_1108.csv  ext_force_guid_exec_task_1108_2.csv  ext_force_guid_exec_task_1108_3.csv  ext_force_guid_exec_task_1108_4.csv  ext_force_guid_exec_task_1108_5.csv  ext_force_guid_exec_task_1108_6.csv  ext_force_guid_exec_task_1120_.csv  ext_force_guid_exec_task_1120_1.csv  ext_force_guid_exec_task_1120_10.csv  ext_force_guid_exec_task_1120_10_1.csv  ext_force_guid_exec_task_1120_10_2.csv  ext_force_guid_exec_task_1120_10_3.csv  ext_force_guid_exec_task_1120_10_4.csv  ext_force_guid_exec_task_1120_10_5.csv  ext_force_guid_exec_task_1120_11.csv  ext_force_guid_exec_task_1120_11_1.csv  ext_force_guid_exec_task_1120_11_2.csv  ext_force_guid_exec_task_1120_11_3.csv  ext_force_guid_exec_task_1120_12_1.csv  ext_force_guid_exec_task_1120_12_2.csv  ext_force_guid_exec_task_1120_12_3.csv  ext_force_guid_exec_task_1120_14_1.csv  ext_force_guid_exec_task_1120_2.csv  ext_force_guid_exec_task_1120_3.csv  ext_force_guid_exec_task_1120_4.csv  ext_force_guid_exec_task_1120_6.csv  ext_force_guid_exec_task_1120_7.csv  ext_force_guid_exec_task_1120_8.csv  ext_force_guid_exec_task_1120_8_1.csv  ext_force_guid_exec_task_1120_8_2.csv  ext_force_guid_exec_task_1120_8_3.csv  (+181 more)
data/matlab/: FrankaEmikaPandaRobot.m  plot_csv.m
data/promp/: .~lock.xtrans_mean_traj.csv#  .~lock.xtrans_mean_traj_20.csv#  q_mean_traj_20.csv  q_mean_traj_50.csv  q_position_mean_traj.csv  q_sigma_traj_3.csv  xtrans_mean_traj.csv  xtrans_mean_traj_20.csv  xtrans_mean_traj_50.csv  xtrans_sigma_traj_3.csv  xtrans_sigma_traj_3_20.csv  xtrans_sigma_traj_3_50.csv
include/: FrankaRobot.h  RealSenseRobot.h  adm_controller.h  convert_csv2matrix.h  dq2tfm.h  franka_model.h  geomJac.h  jacobianEst.h  jacobianEstVector.h  logmap.h  mani_qp_controller.h  manipulabilityJacobian.h  q2x.h  qp_controller.h  readData.h  save_data.h  spdToVec.h  symm2vec.h  test.h  tmprod.h
launch/: mani_qp_controller.launch
src/: FrankaRobot.cpp  MassMatrix.cpp  RealSenseRobot.cpp  adm_controller.cpp  convert_csv2matrix.cpp  dq2tfm.cpp  geomJac.cpp  jacobianEst.cpp  jacobianEstVector.cpp  logmap.cpp  mani_qp_controller.cpp  manipulabilityJacobian.cpp  q2x.cpp  qp_controller.cpp  qp_controller_mani_cart.cpp  readData.cpp  redManipulabilityJacobian.cpp  save_data.cpp  spdToVec.cpp  symm2vec.cpp  tmprod.cpp
(+158 files in other folders)
